replaced normed by density attribute

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -531,15 +531,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Mohit\\Anaconda3\\lib\\site-packages\\matplotlib\\axes\\_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
-      "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n",
       "C:\\Users\\Mohit\\Anaconda3\\lib\\site-packages\\numpy\\lib\\histograms.py:746: RuntimeWarning: invalid value encountered in greater_equal\n",
       "  keep = (tmp_a >= first_edge)\n",
       "C:\\Users\\Mohit\\Anaconda3\\lib\\site-packages\\numpy\\lib\\histograms.py:747: RuntimeWarning: invalid value encountered in less_equal\n",
@@ -552,7 +550,7 @@
        "Text(0,0.5,'Probability')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -570,8 +568,8 @@
    "source": [
     "#Get some visual on character count\n",
     "plt.figure(figsize=(12, 8))\n",
-    "plt.hist(train_data['q1chrlen'], bins=200, range=[0, 200], color='blue', normed=True, label='Q1')\n",
-    "plt.hist(train_data['q2chrlen'], bins=200, range=[0, 200], color='red',alpha = 0.5, normed=True, label='Q2')\n",
+    "plt.hist(train_data['q1chrlen'], bins=200, range=[0, 200], color='blue', density=True, label='Q1')\n",
+    "plt.hist(train_data['q2chrlen'], bins=200, range=[0, 200], color='red',alpha = 0.5, density=True, label='Q2')\n",
     "plt.title('Normalised histogram of character count in questions', fontsize=15)\n",
     "plt.legend()\n",
     "plt.xlabel('Number of characters', fontsize=15)\n",
@@ -580,24 +578,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Mohit\\Anaconda3\\lib\\site-packages\\matplotlib\\axes\\_axes.py:6462: UserWarning: The 'normed' kwarg is deprecated, and has been replaced by the 'density' kwarg.\n",
-      "  warnings.warn(\"The 'normed' kwarg is deprecated, and has been \"\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "Text(0,0.5,'Probability')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -615,8 +605,8 @@
    "source": [
     "#Get some visual on word count\n",
     "plt.figure(figsize=(12, 8))\n",
-    "plt.hist(train_data['q1_nword'], bins=np.linspace(0, 70, 70), range=[0, 70], normed = True, color='blue', label='Q1')\n",
-    "plt.hist(train_data['q2_nword'], bins=np.linspace(0, 70, 70), range=[0, 70], normed = True, color='red',alpha = 0.5, label='Q2')\n",
+    "plt.hist(train_data['q1_nword'], bins=np.linspace(0, 70, 70), range=[0, 70], density = True, color='blue', label='Q1')\n",
+    "plt.hist(train_data['q2_nword'], bins=np.linspace(0, 70, 70), range=[0, 70], density = True, color='red',alpha = 0.5, label='Q2')\n",
     "plt.title('Normalized histogram of word count in questions', fontsize=15)\n",
     "plt.legend()\n",
     "plt.xlabel('Number of words', fontsize=15)\n",
