--- a/mohit_DQD.ipynb
+++ b/mohit_DQD.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/MohitDhungana/duplicate_question_detection/blob/master/DQD_mohit.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/MohitDhungana/duplicate_question_detection/blob/master/mohit_DQD.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -30,108 +30,21 @@
       "metadata": {
         "id": "v1inEJB4nYz9",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 122
-        },
-        "outputId": "c43ce919-941a-4747-f133-02bd5ba3ecf8"
-      },
-      "source": [
-        "!git clone https://github.com/MohitDhungana/duplicate_question_detection.git"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Cloning into 'duplicate_question_detection'...\n",
-            "remote: Enumerating objects: 64, done.\u001b[K\n",
-            "remote: Counting objects: 100% (64/64), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (59/59), done.\u001b[K\n",
-            "remote: Total 64 (delta 17), reused 10 (delta 1), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (64/64), done.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "338uPrUcntpf",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 492
-        },
-        "outputId": "890d14d6-9b71-4627-d647-b4119b9f1134"
-      },
-      "source": [
-        "from tensorflow.python.client import device_lib\n",
-        "device_lib.list_local_devices()"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[name: \"/device:CPU:0\"\n",
-              " device_type: \"CPU\"\n",
-              " memory_limit: 268435456\n",
-              " locality {\n",
-              " }\n",
-              " incarnation: 18085676808618181267, name: \"/device:XLA_CPU:0\"\n",
-              " device_type: \"XLA_CPU\"\n",
-              " memory_limit: 17179869184\n",
-              " locality {\n",
-              " }\n",
-              " incarnation: 14640016556890703171\n",
-              " physical_device_desc: \"device: XLA_CPU device\", name: \"/device:XLA_GPU:0\"\n",
-              " device_type: \"XLA_GPU\"\n",
-              " memory_limit: 17179869184\n",
-              " locality {\n",
-              " }\n",
-              " incarnation: 17133566672036837234\n",
-              " physical_device_desc: \"device: XLA_GPU device\", name: \"/device:GPU:0\"\n",
-              " device_type: \"GPU\"\n",
-              " memory_limit: 14800692839\n",
-              " locality {\n",
-              "   bus_id: 1\n",
-              "   links {\n",
-              "   }\n",
-              " }\n",
-              " incarnation: 4758845898642355728\n",
-              " physical_device_desc: \"device: 0, name: Tesla T4, pci bus id: 0000:00:04.0, compute capability: 7.5\"]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 1
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rxy0IU4UoVDM",
-        "colab_type": "code",
+        "outputId": "7c4b538b-6036-42f4-dd55-ce6066b77c52",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0ca0214f-540a-4599-826d-9ee58eaa6e8d"
+        }
       },
       "source": [
-        "!git log"
+        "print(\"TEST COLAB AND GITHUB INTEGRATION\")"
       ],
       "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "fatal: not a git repository (or any of the parent directories): .git\n"
+            "TEST COLAB AND GITHUB INTEGRATION\n"
           ],
           "name": "stdout"
         }
@@ -140,7 +53,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FCoOTyBjz9Lw",
+        "id": "GfH5THzI5W5u",
         "colab_type": "code",
         "colab": {}
       },
