--- a/DQD_mohit.ipynb
+++ b/DQD_mohit.ipynb
@@ -31,7 +31,7 @@
       "metadata": {
         "id": "v1inEJB4nYz9",
         "colab_type": "code",
-        "outputId": "43573545-4917-4ee2-fa9f-0042c57008dc",
+        "outputId": "af6c6a19-dec1-45a1-d509-44fd7768f203",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -40,7 +40,7 @@
       "source": [
         "print(\"TEST COLAB AND GITHUB INTEGRATION\")"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "GfH5THzI5W5u",
         "colab_type": "code",
-        "outputId": "21cec6fc-92f4-47dd-b7e4-8c5e15bb4d48",
+        "outputId": "0bddf64f-cf9c-45ab-92b1-ee9de5b6bc05",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 125
@@ -66,7 +66,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive', force_remount=True)"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +86,7 @@
       "metadata": {
         "id": "HC73OLu4CbLy",
         "colab_type": "code",
-        "outputId": "238010fb-40e2-4b1e-b22b-4f84cc29323d",
+        "outputId": "54cbedba-8f03-435b-8331-5f9405bb6aa2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 193
@@ -95,7 +95,7 @@
       "source": [
         "!ls '/content/drive/My Drive'"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +149,7 @@
       "metadata": {
         "id": "wHmZqftzEt0V",
         "colab_type": "code",
-        "outputId": "0414b6af-7f21-444a-beb6-439db8562649",
+        "outputId": "ebc74c11-d5be-4632-97e7-ef5aeff00055",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 343
@@ -158,7 +158,7 @@
       "source": [
         "df.head(10)"
       ],
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -304,7 +304,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 6
         }
       ]
     },
@@ -313,11 +313,11 @@
       "metadata": {
         "id": "_6DfySVvES5Z",
         "colab_type": "code",
+        "outputId": "49165e03-66d2-4298-fe82-1569f10ef627",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 439
-        },
-        "outputId": "074999c2-b29f-4d48-b903-e5e40fee73ef"
+          "height": 369
+        }
       },
       "source": [
         "#input layer\n",
@@ -334,21 +334,20 @@
         "left_output = shared_lstm(encoded_left)\n",
         "right_output = shared_lstm(encoded_right)\n",
         "\n",
-        "# merge interpretation\n",
-        "merge = tf.keras.layers.concatenate([left_output, right_output])\n",
+        "# output layer merge interpretation\n",
+        "output_merge = tf.keras.layers.concatenate([left_output, right_output])\n",
         "\n",
-        "#output layer\n",
-        "output = tf.keras.layers.Dense(1, activation='sigmoid')(merge)\n",
-        "model = tf.keras.Model(inputs=[left_input, right_input], outputs=output)\n",
+        "#model\n",
+        "model = tf.keras.Model(inputs=[left_input, right_input], outputs=output_merge)\n",
         "\n",
         "# summarize layers\n",
-        "print(model.summary())\n",
+        "model.summary()\n",
         "\n",
         "# plot graph\n",
-        "tf.keras.utils.plot_model(model, to_file='shared_feature_extractor.png')\n",
-        "print('end')"
+        "# tf.keras.utils.plot_model(model,'shared_feature_extractor.png')\n",
+        "# print('end')"
       ],
-      "execution_count": 25,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,27 +355,23 @@
             "__________________________________________________________________________________________________\n",
             "Layer (type)                    Output Shape         Param #     Connected to                     \n",
             "==================================================================================================\n",
-            "input_29 (InputLayer)           (None, 50)           0                                            \n",
+            "input_13 (InputLayer)           (None, 50)           0                                            \n",
             "__________________________________________________________________________________________________\n",
-            "input_30 (InputLayer)           (None, 50)           0                                            \n",
+            "input_14 (InputLayer)           (None, 50)           0                                            \n",
             "__________________________________________________________________________________________________\n",
-            "embedding_14 (Embedding)        (None, 50, 300)      300000      input_29[0][0]                   \n",
-            "                                                                 input_30[0][0]                   \n",
+            "embedding_6 (Embedding)         (None, 50, 300)      300000      input_13[0][0]                   \n",
+            "                                                                 input_14[0][0]                   \n",
             "__________________________________________________________________________________________________\n",
-            "lstm_14 (LSTM)                  (None, 50)           70200       embedding_14[0][0]               \n",
-            "                                                                 embedding_14[1][0]               \n",
+            "lstm_6 (LSTM)                   (None, 50)           70200       embedding_6[0][0]                \n",
+            "                                                                 embedding_6[1][0]                \n",
             "__________________________________________________________________________________________________\n",
-            "concatenate_10 (Concatenate)    (None, 100)          0           lstm_14[0][0]                    \n",
-            "                                                                 lstm_14[1][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "dense_9 (Dense)                 (None, 1)            101         concatenate_10[0][0]             \n",
+            "concatenate_6 (Concatenate)     (None, 100)          0           lstm_6[0][0]                     \n",
+            "                                                                 lstm_6[1][0]                     \n",
             "==================================================================================================\n",
-            "Total params: 370,301\n",
-            "Trainable params: 370,301\n",
+            "Total params: 370,200\n",
+            "Trainable params: 370,200\n",
             "Non-trainable params: 0\n",
-            "__________________________________________________________________________________________________\n",
-            "None\n",
-            "end\n"
+            "__________________________________________________________________________________________________\n"
           ],
           "name": "stdout"
         }
@@ -385,7 +380,78 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ALGbaS8STwj7",
+        "id": "vR5oFS-7mkpP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 404
+        },
+        "outputId": "62c11115-e3fb-45bb-cedd-f73a94692598"
+      },
+      "source": [
+        "#input layer\n",
+        "left_input=tf.keras.layers.Input(shape=(50,))\n",
+        "right_input=tf.keras.layers.Input(shape=(50,))\n",
+        "\n",
+        "#embedding layer\n",
+        "encoded_left=tf.keras.layers.Embedding(input_dim=1000,output_dim=300,input_length=1000)(left_input)\n",
+        "encoded_right=tf.keras.layers.Embedding(input_dim=1000,output_dim=300,input_length=1000)(right_input)\n",
+        "\n",
+        "# encoded_left = embedding_layer(left_input)\n",
+        "# encoded_right = embedding_layer(right_input)\n",
+        "\n",
+        "left_output=tf.keras.layers.LSTM(50)(encoded_left)\n",
+        "right_output=tf.keras.layers.LSTM(50)(encoded_right)\n",
+        "\n",
+        "# left_output = shared_lstm(encoded_left)\n",
+        "# right_output = shared_lstm(encoded_right)\n",
+        "\n",
+        "# output layer merge interpretation\n",
+        "output_merge = tf.keras.layers.concatenate([left_output, right_output])\n",
+        "\n",
+        "#model\n",
+        "model = tf.keras.Model(inputs=[left_input, right_input], outputs=output_merge)\n",
+        "\n",
+        "# summarize layers\n",
+        "model.summary()\n",
+        "tf.keras.utils.plot_model(model,'zxc.png')"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "__________________________________________________________________________________________________\n",
+            "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+            "==================================================================================================\n",
+            "input_19 (InputLayer)           (None, 50)           0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "input_20 (InputLayer)           (None, 50)           0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "embedding_11 (Embedding)        (None, 50, 300)      300000      input_19[0][0]                   \n",
+            "__________________________________________________________________________________________________\n",
+            "embedding_12 (Embedding)        (None, 50, 300)      300000      input_20[0][0]                   \n",
+            "__________________________________________________________________________________________________\n",
+            "lstm_11 (LSTM)                  (None, 50)           70200       embedding_11[0][0]               \n",
+            "__________________________________________________________________________________________________\n",
+            "lstm_12 (LSTM)                  (None, 50)           70200       embedding_12[0][0]               \n",
+            "__________________________________________________________________________________________________\n",
+            "concatenate_9 (Concatenate)     (None, 100)          0           lstm_11[0][0]                    \n",
+            "                                                                 lstm_12[0][0]                    \n",
+            "==================================================================================================\n",
+            "Total params: 740,400\n",
+            "Trainable params: 740,400\n",
+            "Non-trainable params: 0\n",
+            "__________________________________________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yJVS_2ERneFc",
         "colab_type": "code",
         "colab": {}
       },
