--- a/DQD_mohit.ipynb
+++ b/DQD_mohit.ipynb
@@ -31,7 +31,7 @@
       "metadata": {
         "id": "v1inEJB4nYz9",
         "colab_type": "code",
-        "outputId": "d39a2548-63a9-4d0e-872f-88ec3cd09dcf",
+        "outputId": "b124f0ed-e4b2-4972-ef85-ba95601bd749",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -40,7 +40,7 @@
       "source": [
         "print(\"TEST COLAB AND GITHUB INTEGRATION\")"
       ],
-      "execution_count": 27,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "GfH5THzI5W5u",
         "colab_type": "code",
-        "outputId": "6e676f02-f813-4bf3-d5cb-d0342b90f41f",
+        "outputId": "3ed5610f-eecb-4001-faf7-caa553a0932b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -66,7 +66,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive', force_remount=True)"
       ],
-      "execution_count": 28,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +82,7 @@
       "metadata": {
         "id": "HC73OLu4CbLy",
         "colab_type": "code",
-        "outputId": "3c280c75-db39-4ae0-f2fa-b5a289f195ae",
+        "outputId": "efd44308-beec-4f41-e25c-bcd1232944b3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 193
@@ -91,7 +91,7 @@
       "source": [
         "!ls '/content/drive/My Drive'"
       ],
-      "execution_count": 29,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,7 +145,7 @@
       "metadata": {
         "id": "wHmZqftzEt0V",
         "colab_type": "code",
-        "outputId": "2ce3d7dc-2ce5-4a52-dd8a-ecb8d6bcf74b",
+        "outputId": "37d39b00-7abe-4424-c1fe-91b2a42aff65",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 343
@@ -154,7 +154,7 @@
       "source": [
         "df.head(10)"
       ],
-      "execution_count": 32,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -300,7 +300,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 8
         }
       ]
     },
@@ -309,10 +309,10 @@
       "metadata": {
         "id": "_6DfySVvES5Z",
         "colab_type": "code",
-        "outputId": "7c40eca4-1f6b-4d22-b904-c50776462a1c",
+        "outputId": "5a703f94-e3db-408a-f7ba-9ceb5b60ee1a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 439
+          "height": 512
         }
       },
       "source": [
@@ -344,28 +344,31 @@
         "tf.keras.utils.plot_model(model, to_file='shared_feature_extractor.png')\n",
         "print('end')"
       ],
-      "execution_count": 33,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/resource_variable_ops.py:435: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Colocations handled automatically by placer.\n",
             "__________________________________________________________________________________________________\n",
             "Layer (type)                    Output Shape         Param #     Connected to                     \n",
             "==================================================================================================\n",
-            "input_5 (InputLayer)            (None, 50)           0                                            \n",
+            "input_1 (InputLayer)            (None, 50)           0                                            \n",
             "__________________________________________________________________________________________________\n",
-            "input_6 (InputLayer)            (None, 50)           0                                            \n",
+            "input_2 (InputLayer)            (None, 50)           0                                            \n",
             "__________________________________________________________________________________________________\n",
-            "embedding_2 (Embedding)         (None, 50, 300)      300000      input_5[0][0]                    \n",
-            "                                                                 input_6[0][0]                    \n",
+            "embedding (Embedding)           (None, 50, 300)      300000      input_1[0][0]                    \n",
+            "                                                                 input_2[0][0]                    \n",
             "__________________________________________________________________________________________________\n",
-            "lstm_2 (LSTM)                   (None, 50)           70200       embedding_2[0][0]                \n",
-            "                                                                 embedding_2[1][0]                \n",
+            "lstm (LSTM)                     (None, 50)           70200       embedding[0][0]                  \n",
+            "                                                                 embedding[1][0]                  \n",
             "__________________________________________________________________________________________________\n",
-            "concatenate_2 (Concatenate)     (None, 100)          0           lstm_2[0][0]                     \n",
-            "                                                                 lstm_2[1][0]                     \n",
+            "concatenate (Concatenate)       (None, 100)          0           lstm[0][0]                       \n",
+            "                                                                 lstm[1][0]                       \n",
             "__________________________________________________________________________________________________\n",
-            "dense_2 (Dense)                 (None, 1)            101         concatenate_2[0][0]              \n",
+            "dense (Dense)                   (None, 1)            101         concatenate[0][0]                \n",
             "==================================================================================================\n",
             "Total params: 370,301\n",
             "Trainable params: 370,301\n",
@@ -383,7 +386,7 @@
       "metadata": {
         "id": "JmwmXpUjQS8N",
         "colab_type": "code",
-        "outputId": "cb2eccac-0e49-46db-9dc8-073cb57e3abf",
+        "outputId": "abe26bbb-adaa-4e4f-909a-788e797d482f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -392,7 +395,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 34,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -488,7 +491,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 34
+          "execution_count": 10
         }
       ]
     },
@@ -497,7 +500,7 @@
       "metadata": {
         "id": "LPA0KH6JRP2W",
         "colab_type": "code",
-        "outputId": "fbba2c05-e847-460b-bf47-31fb876308d7",
+        "outputId": "43f0a971-3c5f-45e4-9453-7a4e07191462",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
@@ -509,7 +512,7 @@
         "print(re.sub(r\"[a-z]\",'','ab1c3'))\n",
         "print(re.sub(r\"[^a-z]\",'','ab1c3'))"
       ],
-      "execution_count": 37,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -527,29 +530,29 @@
       "metadata": {
         "id": "kHBkX6jP4Y4t",
         "colab_type": "code",
+        "outputId": "9d3815de-3df7-488d-ef97-44c0424c6b96",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 302
-        },
-        "outputId": "d2dbb0e6-a4d2-42ad-cd7c-41e9303dc7e2"
+        }
       },
       "source": [
         "import seaborn as sns\n",
         "sns.countplot(df['is_duplicate'],label='count')"
       ],
-      "execution_count": 41,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f2701827b38>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fbf36f6c278>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 12
         },
         {
           "output_type": "display_data",
@@ -569,6 +572,178 @@
       "cell_type": "code",
       "metadata": {
         "id": "QntA_TBt46Ud",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3ed9a5d6-5179-4dda-a100-e94355b90bb9"
+      },
+      "source": [
+        "len(df[df['is_duplicate']==0])"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "255027"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gaRACVFVBpGB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        },
+        "outputId": "9f1480a5-4454-4d0c-e7d3-cb4bb1174f00"
+      },
+      "source": [
+        "#iloc selects using index of [row,column/s] as integer values\n",
+        "df.iloc[1,[3,4]]"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "question1    What is the story of Kohinoor (Koh-i-Noor) Dia...\n",
+              "question2    What would happen if the Indian government sto...\n",
+              "Name: 1, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yN2RvuK1Dcev",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        },
+        "outputId": "a7ec1de1-246e-40a0-da70-786befe39336"
+      },
+      "source": [
+        "# loc selects using index value and label name/s\n",
+        "df.loc[1,['question1','question2']]"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "question1    What is the story of Kohinoor (Koh-i-Noor) Dia...\n",
+              "question2    What would happen if the Indian government sto...\n",
+              "Name: 1, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BH9bxfLdKEpi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HFCsWfS8DsG7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "98b81c10-60d4-4b8b-addd-c539bae3f50e"
+      },
+      "source": [
+        "ques1=df.loc[:,'question1']\n",
+        "ques1=str(ques1)\n",
+        "ques1=ques1.split()\n",
+        "ques1[-2]"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'dtype:'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kcs65qYCGy7i",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7f17a7ba-4b65-4cbd-bd28-522a3e974785"
+      },
+      "source": [
+        "len(ques1)"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "551"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "45dHIvAXIZWK",
         "colab_type": "code",
         "colab": {}
       },
