added model.compile and model.fit(commented) and model refactored

--- a/DQD_mohit.ipynb
+++ b/DQD_mohit.ipynb
@@ -31,7 +31,7 @@
       "metadata": {
         "id": "v1inEJB4nYz9",
         "colab_type": "code",
-        "outputId": "b124f0ed-e4b2-4972-ef85-ba95601bd749",
+        "outputId": "dc7cc44a-8cac-4111-f5e8-ba635eb5e0c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -40,7 +40,7 @@
       "source": [
         "print(\"TEST COLAB AND GITHUB INTEGRATION\")"
       ],
-      "execution_count": 3,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "GfH5THzI5W5u",
         "colab_type": "code",
-        "outputId": "3ed5610f-eecb-4001-faf7-caa553a0932b",
+        "outputId": "e548752c-1e39-4aef-83f9-88c7ddc73947",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -66,7 +66,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive', force_remount=True)"
       ],
-      "execution_count": 4,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +82,7 @@
       "metadata": {
         "id": "HC73OLu4CbLy",
         "colab_type": "code",
-        "outputId": "efd44308-beec-4f41-e25c-bcd1232944b3",
+        "outputId": "7527a49b-d27b-4e52-da91-f189e9ac6deb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 193
@@ -91,7 +91,7 @@
       "source": [
         "!ls '/content/drive/My Drive'"
       ],
-      "execution_count": 5,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,7 +145,7 @@
       "metadata": {
         "id": "wHmZqftzEt0V",
         "colab_type": "code",
-        "outputId": "37d39b00-7abe-4424-c1fe-91b2a42aff65",
+        "outputId": "3bc6af5f-299a-472d-8626-6d7634463fd1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 343
@@ -154,7 +154,7 @@
       "source": [
         "df.head(10)"
       ],
-      "execution_count": 8,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -300,84 +300,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_6DfySVvES5Z",
-        "colab_type": "code",
-        "outputId": "5a703f94-e3db-408a-f7ba-9ceb5b60ee1a",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 512
-        }
-      },
-      "source": [
-        "#input layer\n",
-        "left_input=tf.keras.layers.Input(shape=(50,))\n",
-        "right_input=tf.keras.layers.Input(shape=(50,))\n",
-        "\n",
-        "#embedding layer\n",
-        "embedding_layer=tf.keras.layers.Embedding(input_dim=1000,output_dim=300,input_length=1000)\n",
-        "\n",
-        "encoded_left = embedding_layer(left_input)\n",
-        "encoded_right = embedding_layer(right_input)\n",
-        "\n",
-        "shared_lstm=tf.keras.layers.LSTM(50)\n",
-        "left_output = shared_lstm(encoded_left)\n",
-        "right_output = shared_lstm(encoded_right)\n",
-        "\n",
-        "# merge interpretation\n",
-        "merge = tf.keras.layers.concatenate([left_output, right_output])\n",
-        "\n",
-        "#output layer\n",
-        "output = tf.keras.layers.Dense(1, activation='sigmoid')(merge)\n",
-        "model = tf.keras.Model(inputs=[left_input, right_input], outputs=output)\n",
-        "\n",
-        "# summarize layers\n",
-        "print(model.summary())\n",
-        "\n",
-        "# plot graph\n",
-        "tf.keras.utils.plot_model(model, to_file='shared_feature_extractor.png')\n",
-        "print('end')"
-      ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/resource_variable_ops.py:435: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Colocations handled automatically by placer.\n",
-            "__________________________________________________________________________________________________\n",
-            "Layer (type)                    Output Shape         Param #     Connected to                     \n",
-            "==================================================================================================\n",
-            "input_1 (InputLayer)            (None, 50)           0                                            \n",
-            "__________________________________________________________________________________________________\n",
-            "input_2 (InputLayer)            (None, 50)           0                                            \n",
-            "__________________________________________________________________________________________________\n",
-            "embedding (Embedding)           (None, 50, 300)      300000      input_1[0][0]                    \n",
-            "                                                                 input_2[0][0]                    \n",
-            "__________________________________________________________________________________________________\n",
-            "lstm (LSTM)                     (None, 50)           70200       embedding[0][0]                  \n",
-            "                                                                 embedding[1][0]                  \n",
-            "__________________________________________________________________________________________________\n",
-            "concatenate (Concatenate)       (None, 100)          0           lstm[0][0]                       \n",
-            "                                                                 lstm[1][0]                       \n",
-            "__________________________________________________________________________________________________\n",
-            "dense (Dense)                   (None, 1)            101         concatenate[0][0]                \n",
-            "==================================================================================================\n",
-            "Total params: 370,301\n",
-            "Trainable params: 370,301\n",
-            "Non-trainable params: 0\n",
-            "__________________________________________________________________________________________________\n",
-            "None\n",
-            "end\n"
-          ],
-          "name": "stdout"
+          "execution_count": 27
         }
       ]
     },
@@ -386,7 +309,7 @@
       "metadata": {
         "id": "JmwmXpUjQS8N",
         "colab_type": "code",
-        "outputId": "abe26bbb-adaa-4e4f-909a-788e797d482f",
+        "outputId": "cf568bcd-1af4-4a46-d66a-1f5be1889d10",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -395,7 +318,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 10,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -491,7 +414,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 28
         }
       ]
     },
@@ -500,7 +423,7 @@
       "metadata": {
         "id": "LPA0KH6JRP2W",
         "colab_type": "code",
-        "outputId": "43f0a971-3c5f-45e4-9453-7a4e07191462",
+        "outputId": "26ecf125-bbcc-4a35-a911-547718c54f5a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
@@ -512,7 +435,7 @@
         "print(re.sub(r\"[a-z]\",'','ab1c3'))\n",
         "print(re.sub(r\"[^a-z]\",'','ab1c3'))"
       ],
-      "execution_count": 11,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -530,7 +453,7 @@
       "metadata": {
         "id": "kHBkX6jP4Y4t",
         "colab_type": "code",
-        "outputId": "9d3815de-3df7-488d-ef97-44c0424c6b96",
+        "outputId": "4930305d-9006-47d9-fd40-9ec2328aa011",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 302
@@ -540,19 +463,19 @@
         "import seaborn as sns\n",
         "sns.countplot(df['is_duplicate'],label='count')"
       ],
-      "execution_count": 12,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fbf36f6c278>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f7e09067048>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 30
         },
         {
           "output_type": "display_data",
@@ -573,16 +496,16 @@
       "metadata": {
         "id": "QntA_TBt46Ud",
         "colab_type": "code",
+        "outputId": "686a7d98-b405-4c15-bcfd-a5d88b2cb755",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "3ed9a5d6-5179-4dda-a100-e94355b90bb9"
+        }
       },
       "source": [
         "len(df[df['is_duplicate']==0])"
       ],
-      "execution_count": 13,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -594,7 +517,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 31
         }
       ]
     },
@@ -603,17 +526,17 @@
       "metadata": {
         "id": "gaRACVFVBpGB",
         "colab_type": "code",
+        "outputId": "4a15c1ff-02e2-42de-835a-698daf81cfe7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
-        },
-        "outputId": "9f1480a5-4454-4d0c-e7d3-cb4bb1174f00"
+        }
       },
       "source": [
         "#iloc selects using index of [row,column/s] as integer values\n",
         "df.iloc[1,[3,4]]"
       ],
-      "execution_count": 42,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -627,7 +550,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 32
         }
       ]
     },
@@ -636,17 +559,17 @@
       "metadata": {
         "id": "yN2RvuK1Dcev",
         "colab_type": "code",
+        "outputId": "0d89cf04-4090-4ca5-d804-671b183dc7b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
-        },
-        "outputId": "a7ec1de1-246e-40a0-da70-786befe39336"
+        }
       },
       "source": [
         "# loc selects using index value and label name/s\n",
         "df.loc[1,['question1','question2']]"
       ],
-      "execution_count": 43,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -660,7 +583,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 33
         }
       ]
     },
@@ -682,11 +605,11 @@
       "metadata": {
         "id": "HFCsWfS8DsG7",
         "colab_type": "code",
+        "outputId": "7002d031-d12b-4a18-b26a-524f5179a37e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "98b81c10-60d4-4b8b-addd-c539bae3f50e"
+        }
       },
       "source": [
         "ques1=df.loc[:,'question1']\n",
@@ -694,7 +617,7 @@
         "ques1=ques1.split()\n",
         "ques1[-2]"
       ],
-      "execution_count": 67,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -706,7 +629,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 67
+          "execution_count": 34
         }
       ]
     },
@@ -715,16 +638,16 @@
       "metadata": {
         "id": "kcs65qYCGy7i",
         "colab_type": "code",
+        "outputId": "6a2b4f77-0ecb-4792-b26d-40e2093c3fec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "7f17a7ba-4b65-4cbd-bd28-522a3e974785"
+        }
       },
       "source": [
         "len(ques1)"
       ],
-      "execution_count": 64,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -736,7 +659,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 64
+          "execution_count": 35
         }
       ]
     },
@@ -744,6 +667,109 @@
       "cell_type": "code",
       "metadata": {
         "id": "45dHIvAXIZWK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 422
+        },
+        "outputId": "fed520ed-f66f-4b68-de3e-405f16c2f6e5"
+      },
+      "source": [
+        "from tensorflow.keras.layers import Input, Embedding, LSTM, Dense, concatenate\n",
+        "\n",
+        "\n",
+        "# input layer\n",
+        "#recheck shape before training\n",
+        "left_input=Input(shape=(50,))\n",
+        "right_input=Input(shape=(50,))\n",
+        "\n",
+        "# embedding layer\n",
+        "# recheck dims \n",
+        "embedding_layer=Embedding(input_dim=1000,output_dim=300,input_length=1000)\n",
+        "\n",
+        "encoded_left = embedding_layer(left_input)\n",
+        "encoded_right = embedding_layer(right_input)\n",
+        "\n",
+        "#LSTM instantiation\n",
+        "# check parameter \n",
+        "shared_lstm=LSTM(50)\n",
+        "\n",
+        "# shared LSTM\n",
+        "left_output = shared_lstm(encoded_left)\n",
+        "right_output = shared_lstm(encoded_right)\n",
+        "\n",
+        "# merge shared LSTMs\n",
+        "merge_layer = concatenate([left_output, right_output])\n",
+        "\n",
+        "# output dense layer\n",
+        "output_layer = Dense(1, activation='sigmoid')(merge_layer)\n",
+        "\n",
+        "# define the model\n",
+        "model = tf.keras.Model(inputs=[left_input, right_input], outputs=output_layer)\n",
+        "\n",
+        "# summarize layers\n",
+        "print(model.summary())\n",
+        "\n",
+        "# plot graph\n",
+        "# tf.keras.utils.plot_model(model, to_file='shared_feature_extractor.png')\n",
+        "\n",
+        "# print('end')"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "__________________________________________________________________________________________________\n",
+            "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+            "==================================================================================================\n",
+            "input_17 (InputLayer)           (None, 50)           0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "input_18 (InputLayer)           (None, 50)           0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "embedding_8 (Embedding)         (None, 50, 300)      300000      input_17[0][0]                   \n",
+            "                                                                 input_18[0][0]                   \n",
+            "__________________________________________________________________________________________________\n",
+            "lstm_8 (LSTM)                   (None, 50)           70200       embedding_8[0][0]                \n",
+            "                                                                 embedding_8[1][0]                \n",
+            "__________________________________________________________________________________________________\n",
+            "concatenate_8 (Concatenate)     (None, 100)          0           lstm_8[0][0]                     \n",
+            "                                                                 lstm_8[1][0]                     \n",
+            "__________________________________________________________________________________________________\n",
+            "dense_8 (Dense)                 (None, 1)            101         concatenate_8[0][0]              \n",
+            "==================================================================================================\n",
+            "Total params: 370,301\n",
+            "Trainable params: 370,301\n",
+            "Non-trainable params: 0\n",
+            "__________________________________________________________________________________________________\n",
+            "None\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MfEoErm5rKR7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# compile the model\n",
+        "model.compile(optimizer='adadelta',loss='binary_crossentropy',metrics=['accuracy'])\n",
+        "\n",
+        "# train (fit) the model\n",
+        "# hist=model.fit([input_column1_head,input_column2_head], output_label, epochs=5, shuffle=True, validation_split=0.2)\n",
+        "# print(hist.history)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JEks7d-D0HSv",
         "colab_type": "code",
         "colab": {}
       },
